Tidy up yapf rules

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,9 @@ license_file = LICENSE
 universal = 1
 
 [yapf]
-based_on_style = pep8
-coalesce_brackets = false
-column_limit = 120
-dedent_closing_brackets = true
+BASED_ON_STYLE = pep8
+COALESCE_BRACKETS = false
+COLUMN_LIMIT = 120
+DEDENT_CLOSING_BRACKETS = true
 SPLIT_BEFORE_CLOSING_BRACKET = true
 SPLIT_COMPLEX_COMPREHENSION = true
-#SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = true
