--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.formatting.provider": "yapf",
-    "python.pythonPath": ".\\venvs\\test\\Scripts\\python.exe",
+    "python.pythonPath": ".\\venv\\test\\Scripts\\python.exe",
     "python.testing.pyTestArgs": [
         "tests"
     ],
