--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,19 @@
 {
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveTimeout": 3000,
+
     "python.formatting.provider": "yapf",
-    "python.pythonPath": ".\\venv\\test\\Scripts\\python.exe",
+    "python.pythonPath": "${workspaceFolder}\\.venvs\\test\\Scripts\\python.exe",
     "python.testing.pytestArgs": [
         "tests"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.venvPath": "${workspaceFolder}\\.venvs",
+
+    "search.exclude": {
+        "**/.git": true,
+        "**/.venvs": true
+    }
 }
