--- a/setup.cfg
+++ b/setup.cfg
@@ -9,5 +9,6 @@ BASED_ON_STYLE = pep8
 COALESCE_BRACKETS = false
 COLUMN_LIMIT = 120
 DEDENT_CLOSING_BRACKETS = true
+SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = true
 SPLIT_BEFORE_CLOSING_BRACKET = true
 SPLIT_COMPLEX_COMPREHENSION = true
