Support true curve settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
     "search.exclude": {
         "**/.git": true,
         "**/.venvs": true
-    }
+    },
+    "python.linting.pylintEnabled": true
 }
