--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
   - "3.7"
   # command to install dependencies
 install:
-  - pip install -r requirements.test.txt
-  - pip install -r requirements.txt
+  - pip install -r requirements.test.txt -U
+  - pip install -r requirements.txt -U
 # command to run tests
 script:
   - python -m pytest tests
