Improved ArcGIS JSON templating

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ universal = 1
 
 [yapf]
 BASED_ON_STYLE = pep8
+ALLOW_SPLIT_BEFORE_DICT_VALUE = false
 COALESCE_BRACKETS = false
 COLUMN_LIMIT = 120
 DEDENT_CLOSING_BRACKETS = true
