--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 enum34>=1.1.6,<2
 future>=0.17.1,<0.19.0
+html2text==2019.8.11 ; python_version<'3.0' # later versions drop support for Python 2
+html2text>=2019.8.11 ; python_version>='3.0'
 jsonpath-ng>=1.4.3,<2
 lxml>=4.3.2,<5
 tzlocal>=2.0.0,<3
