--- a/requirements.test.txt
+++ b/requirements.test.txt
@@ -1,4 +1,5 @@
-pylint>=1.9.4,<3
+pylint==1.9.4 ; python_version<='3.0'
+pylint>=2.3.1 ; python_version>='3.0'
 pytest>=4.3.0,<5
 pytest-cov>=2.6.1,<3
 contextlib2>=0.5.5,<0.6
