--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "editor.formatOnSave": true,
     "editor.formatOnSaveTimeout": 3000,
-
     "python.formatting.provider": "yapf",
     "python.testing.pytestArgs": [
         "tests"
@@ -9,8 +8,8 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
+    "python.terminal.activateEnvironment": false,
     "python.venvPath": "${workspaceFolder}\\.venvs",
-
     "search.exclude": {
         "**/.git": true,
         "**/.venvs": true
