--- a/requirements.test.txt
+++ b/requirements.test.txt
@@ -1,6 +1,8 @@
-pylint==1.9.4 ; python_version<='3.0'
+pylint==1.9.4 ; python_version<'3.0'
 pylint>=2.3.1 ; python_version>='3.0'
-pytest>=4.3.0,<5
-pytest-cov>=2.6.1,<3
+pytest>=4.3.0,<5 ; python_version<'3.0'
+pytest-cov>=2.6.1,<3 ; python_version<'3.0'
+pytest>=6,<7 ; python_version>='3.0'
+pytest-cov>=3,<4 ; python_version>='3.0'
 contextlib2>=0.5.5,<0.6
 yapf>=0.28.0,<0.29.0
