--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aenum>=3.1.5,<4
-future>=0.17.1,<0.19.0
+future>=0.16.0
 html2text==2019.8.11 ; python_version<'3.0' # later versions drop support for Python 2
 html2text>=2019.8.11 ; python_version>='3.0'
 jsonpath-ng>=1.4.3,<2
